--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,13 +10,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: Run tests
+        run: mvn clean compile test
       - name: Execute TRCLI Action
         uses: gurock/trcli-action@main
         with:
           host: 'https://testrail101.testrail.io/'
-          username: 'trcli@testrail.com'
-          password: 'NA'
-          project: 'Automation Framework Samples'
+          username: "${{ secrets.TESTRAIL_USERNAME }}"
+          password: "${{ secrets.TESTRAIL_PASSWORD }}"
+          project: 'GitHub Action Demo'
           auto_create_cases_yes: 'true'
           report_file_path: 'target/surefire-reports/TEST-com.testrail.java.CalcTest.xml'
           title: 'Automated tests'
